# xpertai-chatkit-advanced-samples

./: README.md  package.json  pnpm-lock.yaml
examples/chatkit-host/: README.md  package.json
examples/deep-researcher/: README.md  package.json  xpert-chatkit-deep-researcher.yaml
examples/deep-researcher/.github/: copilot-instructions.md
examples/deep-researcher/backend/: .env.example  README.md  pyproject.toml
examples/deep-researcher/backend/app/: main.py
examples/deep-researcher/frontend/: .env.example  index.html  package.json
examples/deep-researcher/frontend/src/: App.vue
examples/deep-researcher/frontend/src/components/: HelloWorld.vue
examples/mindmap-assistant/: Mindmap-agents.yaml  README.md  VIDEO_SCRIPT.md  package.json
examples/mindmap-assistant/backend/: .env.example  .gitignore  pyproject.toml
examples/mindmap-assistant/backend/app/: __init__.py  main.py
examples/mindmap-assistant/backend/app/agents/: __init__.py
examples/mindmap-assistant/backend/app/data/: __init__.py  mindmap_store.py
examples/mindmap-assistant/frontend/: .env.example  index.html  package.json
examples/mindmap-assistant/frontend/src/: App.tsx  index.css  vite-env.d.ts
examples/mindmap-assistant/frontend/src/components/: ChatKitPanel.tsx  MindmapCanvas.tsx  MindmapNode.tsx  Toolbar.tsx
examples/mindmap-assistant/frontend/src/lib/: config.ts  layout.ts  mindmap.ts
examples/mindmap-assistant/frontend/src/store/: useAppStore.ts  (+1 more)
examples/sap-ui5/: README.md  xpert-demo-fiori.yaml
examples/sap-wm-manager/backend/Z_CLIENT_SECRET/: CREATE_ENTITY.abap
