[project]
name = "deep-researcher-backend"
version = "0.1.0"
description = "FastAPI service for issuing ChatKit client secrets"
authors = [{ name = "Deep Researcher" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "anyio>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
